<resources>
    <string name="app_name">Currently</string>

    <!-- Forecasted Weather Fragment Labels -->
    <string name="max_temperature_label">Max Temperature : </string>
    <string name="min_temperature_label">Min Temperature : </string>
    <string name="humidity_label">Humidity :</string>
    <string name="wind_speed_label">Wind Speed :</string>

    <!-- Content Descriptions -->
    <string name="weather_icon_content_description">Icon used to visually display the weather to the user</string>

    <!-- Dialog formatting -->
    <string name="error_dialog_confirmation_button_text">Confirm</string>

    <!-- Error titles -->
    <string name="error_default_title">Error</string>

    <!-- Error Messages -->
    <string name="error_location_message">We could not determine your location, please make sure your GPS is turned on.</string>

    <!-- API Key -->
    <string name="open_weather_api_key">1186528906facbd9cfd3d9f52052d427</string>
</resources>
